--- a/COMPANHIAS/tap.html
+++ b/COMPANHIAS/tap.html
@@ -127,158 +127,175 @@
                     </td>
                 </tr>
             </table>
+            <div id="minhaDiv" style="display:none">
+                <table>
+                    <tr>
 
-            <table>
-                <tr>
-                    <td>
-                        <a href="#continuar"><button type="submit"> Continuar a ler </button></a>
-                    </td>
-                    <td>
-                        <a href="https://www.flytap.com/pt-pt/a-bordo/conhecer-a-frota" target="_blank"><button
-                                type="submit"> Ver no
-                                site oficial </button></a>
-                    </td>
-                </tr>
-            </table>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/LongRange.png" alt="">
+                        </td>
+                        <td class="td-cont">
+                            <h3>A321-200 Long Range</h3>
+                            <p>O A321LR tem 168 lugares para passageiros. Atinge a velocidade máxima de 7,400km, e
+                                a sua velocidade de cruzeiro é de 900km/h.</p>
+                            <p>Concebido para operar voos médios e de longo curso. A companhia conta com 4 aviões deste
+                                modelo.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="td-cont">
+                            <h3>A321-200neo</h3>
+                            <p>Este modelo conta com 216 lugares. Chega a atingir a velocidade máxima de 6,000km, e
+                                a sua velocidade de cruzeiro é de 900km/h.</p>
+                            <p>Com equipamentos onde o conforto e a modernidade se encontram para dar uma qualidade
+                                superior
+                                ao viajante. Consume menos 15% combustível do que o A321, permitindo voar rotas mais
+                                longas.
+                                A TAP conta com 8 unidades
+                                deste modelo.</p>
+                        </td>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/A321neo.png" alt="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/A320-200neo.png" alt="">
+                        </td>
+                        <td class="td-cont">
+                            <h3>A320-200neo</h3>
+                            <p>O A320-200neo conta com 174 lugares para passageiros. Atinge a velocidade máxima de
+                                6,500km,
+                                e
+                                a sua velocidade de cruzeiro é de 900km/h.</p>
+                            <p>Com mais espaço de carga e de cabine, bem como o maior alcance, possui também motores de
+                                última geração, quando comparado com o seu modelo anterior, o A320. A companhia tem 7
+                                aviões
+                                deste
+                                modelo na sua frota.</p>
+                        </td>
+                    </tr>
 
-
-            <a name="continuar"></a>
-            <table>
-                <tr>
-
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/LongRange.png" alt="">
-                    </td>
-                    <td class="td-cont">
-                        <h3>A321-200 Long Range</h3>
-                        <p>O A321LR tem 168 lugares para passageiros. Atinge a velocidade máxima de 7,400km, e
-                            a sua velocidade de cruzeiro é de 900km/h.</p>
-                        <p>Concebido para operar voos médios e de longo curso. A companhia conta com 4 aviões deste
-                            modelo.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="td-cont">
-                        <h3>A321-200neo</h3>
-                        <p>Este modelo conta com 216 lugares. Chega a atingir a velocidade máxima de 6,000km, e
-                            a sua velocidade de cruzeiro é de 900km/h.</p>
-                        <p>Com equipamentos onde o conforto e a modernidade se encontram para dar uma qualidade superior
-                            ao viajante. Consume menos 15% combustível do que o A321, permitindo voar rotas mais longas.
-                            A TAP conta com 8 unidades
-                            deste modelo.</p>
-                    </td>
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/A321neo.png" alt="">
-                    </td>
-                </tr>
-                <tr>
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/A320-200neo.png" alt="">
-                    </td>
-                    <td class="td-cont">
-                        <h3>A320-200neo</h3>
-                        <p>O A320-200neo conta com 174 lugares para passageiros. Atinge a velocidade máxima de 6,500km,
-                            e
-                            a sua velocidade de cruzeiro é de 900km/h.</p>
-                        <p>Com mais espaço de carga e de cabine, bem como o maior alcance, possui também motores de
-                            última geração, quando comparado com o seu modelo anterior, o A320. A companhia tem 7 aviões
-                            deste
-                            modelo na sua frota.</p>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td class="td-cont">
-                        <h2>A330</h2>
-                        <p>Com este modelo, a TAP conta com o <strong>A330-200</strong> podendo abanger 263 a 269
-                            passageiros. Chega a atingir a velocidade máxima de
-                            12,000km, e
-                            a sua velocidade de cruzeiro é de 930km/h.</p>
-                        <p>Com um eficiente consumo e uma cabine confortável e silenciosa, é uma das estrelas da desta
-                            frota.
-                            A TAP conta com 5 unidades
-                            deste modelo.</p>
-                    </td>
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/Frota_A330.png" alt="">
-                    </td>
-                </tr>
-                <tr>
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/Frota_A320.png" alt="">
-                    </td>
-                    <td class="td-cont">
-                        <h2>A320</h2>
-                        <p>O <strong>A320-200</strong> conta com 174 lugares para passageiros. Atinge a velocidade
-                            máxima de
-                            5,500km,
-                            e
-                            a sua velocidade de cruzeiro é de 900km/h.</p>
-                        <p>A versão que originou toda a família, é considerado o standard da categoria. Tem um
-                            corredor
-                            único e é aquele com que todos se comparam. Contando com 16 aviões.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="td-cont">
-                        <h2>A319</h2>
-                        <p>O <strong>A319-100</strong> pode transportar 144 passageiros. Chega a atingir a velocidade
-                            máxima de
-                            5,700km, e
-                            a sua velocidade de cruzeiro é de 900km/h.</p>
-                        <p>O Airbus A319 alia um espaço generoso a uma performance invejável, suportando 5700 km de voo.
-                            A TAP conta com 8 unidades
-                            deste modelo.</p>
-                    </td>
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/Frota_A330.png" alt="">
-                    </td>
-                </tr>
-                <tr>
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/Frota_Embraer-195.png" alt="">
-                    </td>
-                    <td class="td-cont">
-                        <h2>Embraer195</h2>
-                        <p>Este avião tem lugar para 118 passageiros. Atinge a velocidade
-                            máxima de 4,260km, e a sua velocidade de cruzeiro é de 870km/h.</p>
-                        <p>Com janelas quase 30% mais amplas do que os outros aviões, convida à contemplação da paisagem
-                            e corporiza um maior esforço para a preservar, graças à utilização de materiais mais
-                            silenciosos e de um motor menos poluente. Preste serviço á TAP Express, que conta com 4
-                            aviões.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="td-cont">
-                        <h2>Embraer190</h2>
-                        <p>Este avião tem a capacidade de transportar 106 passageiros. Atinge a velocidade
-                            máxima de 4,445km, e a sua velocidade de cruzeiro é de 890km/h.</p>
-                        <p>É um dos aviões mais atuais, de tecnologia avançada, que permite abrir novas rotas e chegar a
-                            novos mercados. A TAP conta com 9 unidades
-                            deste modelo (todos eles operados pela Portugália, companhia aéria regional pertencente ao
-                            grupo TAP).</p>
-                    </td>
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/Embraer-190-Alta.png" alt="">
-                    </td>
-                </tr>
-                <tr>
-                    <td width="50%">
-                        <img class="imagemfrota" src="../img/companhias/frota/ATR-72.png" alt="">
-                    </td>
-                    <td class="td-cont">
-                        <h2>ATR 72-600</h2>
-                        <p>Este avião tem lugar para apenas 70 passageiros. Atinge a velocidade
-                            máxima de 1,529km, e a sua velocidade de cruzeiro é de 508km/h.</p>
-                        <p> Preste serviço á TAP Express, que conta com 8 aviões, no entanto encontra-se a serviço da
-                            <a href="white.html">White Airlines</a>.
-                        </p>
-                    </td>
-                </tr>
-            </table>-->
+                    <tr>
+                        <td class="td-cont">
+                            <h2>A330</h2>
+                            <p>Com este modelo, a TAP conta com o <strong>A330-200</strong> podendo abanger 263 a 269
+                                passageiros. Chega a atingir a velocidade máxima de
+                                12,000km, e
+                                a sua velocidade de cruzeiro é de 930km/h.</p>
+                            <p>Com um eficiente consumo e uma cabine confortável e silenciosa, é uma das estrelas da
+                                desta
+                                frota.
+                                A TAP conta com 5 unidades
+                                deste modelo.</p>
+                        </td>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/Frota_A330.png" alt="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/Frota_A320.png" alt="">
+                        </td>
+                        <td class="td-cont">
+                            <h2>A320</h2>
+                            <p>O <strong>A320-200</strong> conta com 174 lugares para passageiros. Atinge a velocidade
+                                máxima de
+                                5,500km,
+                                e
+                                a sua velocidade de cruzeiro é de 900km/h.</p>
+                            <p>A versão que originou toda a família, é considerado o standard da categoria. Tem um
+                                corredor
+                                único e é aquele com que todos se comparam. Contando com 16 aviões.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="td-cont">
+                            <h2>A319</h2>
+                            <p>O <strong>A319-100</strong> pode transportar 144 passageiros. Chega a atingir a
+                                velocidade
+                                máxima de
+                                5,700km, e
+                                a sua velocidade de cruzeiro é de 900km/h.</p>
+                            <p>O Airbus A319 alia um espaço generoso a uma performance invejável, suportando 5700 km de
+                                voo.
+                                A TAP conta com 8 unidades
+                                deste modelo.</p>
+                        </td>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/Frota_A330.png" alt="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/Frota_Embraer-195.png" alt="">
+                        </td>
+                        <td class="td-cont">
+                            <h2>Embraer195</h2>
+                            <p>Este avião tem lugar para 118 passageiros. Atinge a velocidade
+                                máxima de 4,260km, e a sua velocidade de cruzeiro é de 870km/h.</p>
+                            <p>Com janelas quase 30% mais amplas do que os outros aviões, convida à contemplação da
+                                paisagem
+                                e corporiza um maior esforço para a preservar, graças à utilização de materiais mais
+                                silenciosos e de um motor menos poluente. Preste serviço á TAP Express, que conta com 4
+                                aviões.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="td-cont">
+                            <h2>Embraer190</h2>
+                            <p>Este avião tem a capacidade de transportar 106 passageiros. Atinge a velocidade
+                                máxima de 4,445km, e a sua velocidade de cruzeiro é de 890km/h.</p>
+                            <p>É um dos aviões mais atuais, de tecnologia avançada, que permite abrir novas rotas e
+                                chegar a
+                                novos mercados. A TAP conta com 9 unidades
+                                deste modelo (todos eles operados pela Portugália, companhia aéria regional pertencente
+                                ao
+                                grupo TAP).</p>
+                        </td>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/Embraer-190-Alta.png" alt="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <img class="imagemfrota" src="../img/companhias/frota/ATR-72.png" alt="">
+                        </td>
+                        <td class="td-cont">
+                            <h2>ATR 72-600</h2>
+                            <p>Este avião tem lugar para apenas 70 passageiros. Atinge a velocidade
+                                máxima de 1,529km, e a sua velocidade de cruzeiro é de 508km/h.</p>
+                            <p> Preste serviço á TAP Express, que conta com 8 aviões, no entanto encontra-se a serviço
+                                da
+                                <a href="white.html">White Airlines</a>.
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <button id="centralizar" type="button" onclick="Mudarestado('minhaDiv')">Mostrar / Esconder</button>
+            <br>
+            <br>
         </a>
     </main>
     <br>
+
+    <script>
+        function Mudarestado(el) {
+            var display = document.getElementById(el).style.display;
+            if (display == "none")
+                document.getElementById(el).style.display = 'block';
+            else
+                document.getElementById(el).style.display = 'none';
+        }
+    </script>
+
+
+
+
+
+
+
 </body>
 
 </html>
