--- a/COMPANHIAS/tap.html
+++ b/COMPANHIAS/tap.html
@@ -267,13 +267,13 @@
                                 máxima de 1,529km, e a sua velocidade de cruzeiro é de 508km/h.</p>
                             <p> Preste serviço á TAP Express, que conta com 8 aviões, no entanto encontra-se a serviço
                                 da
-                                <a href="white.html">White Airlines</a>.
+                                <a href="white.html" target="_blank">White Airlines</a>.
                             </p>
                         </td>
                     </tr>
                 </table>
             </div>
-            <button id="centralizar" type="button" onclick="Mudarestado('minhaDiv')">Mostrar / Esconder</button>
+            <button id="centralizar" type="button" onclick="Mudarestado('minhaDiv')"></button>
             <br>
             <br>
         </a>
