--- a/index.html
+++ b/index.html
@@ -107,11 +107,38 @@
     </div>
     <br>
     <br>
-    <br>
-    <a name="loja"></a>
-    <div>
-
+    <div id="loja">
+        <table>
+            <tr>
+                <td>
+                    <h1>Loja</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolor debitis hic obcaecati
+                        autem perferendis molestiae sequi nisi eos! Facilis, nobis ad, ducimus quidem sequi rerum velit
+                        non molestias, ipsa at voluptates doloremque?</p>
+                </td>
+                <td>
+                    <picture>
+                        <img src="img/loja/testeloja/sweat branca.png" alt="Imagem oficial do site">
+                    </picture>
+                </td>
+            </tr>
+        </table>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
