--- a/index.html
+++ b/index.html
@@ -107,38 +107,29 @@
     </div>
     <br>
     <br>
-    <div id="loja">
+    <div id="loja" data-aos="fade-right">
+        <br>
+        <br>
+
         <table>
             <tr>
-                <td>
+                <td width="65%">
                     <h1>Loja</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolor debitis hic obcaecati
-                        autem perferendis molestiae sequi nisi eos! Facilis, nobis ad, ducimus quidem sequi rerum velit
-                        non molestias, ipsa at voluptates doloremque?</p>
+                    <p>Gostou do nosso site? Veja as nossas roupas e ajude-nos a passar o céu divulgando o nosso
+                        site cheio de estilo.</p>
+                    <p>Veja tambem as nossas decorações para interiores perfeitos para dár de presente ao seu
+                        familiar amante de aviões.</p>
                 </td>
                 <td>
-                    <picture>
+                    <a href="loja.html">
                         <img src="img/loja/testeloja/sweat branca.png" alt="Imagem oficial do site">
-                    </picture>
+                    </a>
                 </td>
             </tr>
         </table>
+        <br>
+        <br>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -147,6 +138,7 @@
             duration: 900
         });
     </script>
+
 
 </body>
 
