--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </td>
                 <td>
                     <a href="loja.html">
-                        <img src="img/loja/testeloja/sweat branca.png" alt="Imagem oficial do site">
+                        <img src="img/loja/sweat branca.png" alt="Imagem oficial do site">
                     </a>
                 </td>
             </tr>
