--- a/loja.html
+++ b/loja.html
@@ -38,7 +38,7 @@
         const items = [
             {
                 id: 0,
-                nome: 'camiseta',
+                nome: 'sweat',
                 img: 'img/loja/sweat branca.png',
                 quantidade: 0
             },
@@ -81,7 +81,7 @@
                     containerCarrinho.innerHTML += `
                 <div class="info-single-checkout">
                     <p style="float:left">Produto: `+ val.nome + ` </p>
-                    <p style="float:right">Qantidade: `+ val.quantidade + `</p>
+                    <p style="float:right">Quantidade: `+ val.quantidade + `</p>
                     <div style="clear:both"></div>
                 </div>
                 `;
