--- a/loja.html
+++ b/loja.html
@@ -38,7 +38,7 @@
         const items = [
             {
                 id: 0,
-                nome: 'sweat',
+                nome: 'Sweat',
                 img: 'img/loja/sweat branca.png',
                 quantidade: 0
             },
@@ -84,6 +84,8 @@
                     <p style="float:right">Quantidade: `+ val.quantidade + `</p>
                     <div style="clear:both"></div>
                 </div>
+
+                <a href="pagamento.html"><input type="button" onclick="funcao1()" value="Submeter" /></a>
                 `;
                 }
             })
