--- a/loja.html
+++ b/loja.html
@@ -38,19 +38,19 @@
         const items = [
             {
                 id: 0,
-                nome: 'Sweat',
+                nome: 'Suéter',
                 img: 'img/loja/sweat branca.png',
                 quantidade: 0
             },
             {
                 id: 1,
-                nome: 't-shirt',
+                nome: 'T-shirt',
                 img: 'img/loja/t-shirt.png',
                 quantidade: 0
             },
             {
                 id: 2,
-                nome: 'bone',
+                nome: 'Boné',
                 img: 'img/loja/bone_branco.png',
                 quantidade: 0
             },
@@ -80,11 +80,11 @@
                 if (val.quantidade > 0) {
                     containerCarrinho.innerHTML += `
                 <div class="info-single-checkout">
-                    <p style="float:left">Produto: `+ val.nome + ` </p>
-                    <p style="float:right">Quantidade: `+ val.quantidade + `</p>
+                    <p style="float:left"> `+ val.nome + ` </p>
+                    <p style="float:right"> `+ val.quantidade + `</p>
                     <div style="clear:both"></div>
                 </div>
-
+<br>
                 <a href="pagamento.html"><input type="button" onclick="funcao1()" value="Submeter" /></a>
                 `;
                 }
