--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             </tr>
             <tr>
                 <td width="48%">
-                    <p>Conheça o que portugal tem a oferecer nos céus. Todas as companhias ao
-                        seu alcance. </p>
+                    <p>Conheça o que portugal tem a oferecer nos céus. Todas as companhias aéreas ao seu alcance. </p>
                 </td>
                 <td></td>
             </tr>
@@ -99,8 +98,8 @@
                 <td data-aos="fade-left">
                     <h1>Sobre</h1>
                     <p>Este site tem como objetivo mostrar aos portugueses e ao mundo que temos bastante por onde
-                        escolher quando se quer viajar e que somos orgulhosos por ter ótimas companhias dispostas a
-                        assegurar a nossa segurança.</p>
+                        escolher quando se quer viajar. Somos orgulhosos por ter ótimas companhias dispostas a assegurar
+                        a nossa segurança.</p>
                 </td>
             </tr>
         </table>
@@ -116,8 +115,8 @@
                 <td width="65%">
                     <h1>Loja</h1>
                     <p>Gostou do nosso site? Veja as nossas roupas e ajude-nos a passar o céu divulgando o nosso
-                        site cheio de estilo.</p>
-                    <p>Veja tambem as nossas decorações para interiores perfeitos para dár de presente ao seu
+                        site.</p>
+                    <p>Veja também as nossas decorações para interiores perfeitos para dar de presente ao seu
                         familiar amante de aviões.</p>
                 </td>
                 <td>
